--- a/themes/WebStack-Hugo/layouts/partials/content_search.html
+++ b/themes/WebStack-Hugo/layouts/partials/content_search.html
@@ -183,9 +183,7 @@
                         <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active"><a class="overflowClip_1" href="#">LXK - 用脚去选每一个链接</a>
                             </div>
-                            <div class="carousel-item active"><a class="overflowClip_1" href="#">good - 西北师范大学公益导航</a>
-                            </div>
-                            <div class="carousel-item "><a class="overflowClip_1" href="#">talk - 当然是好用啦！</a></div>
+                            <div class="carousel-item "><a class="overflowClip_1" href="#">LXK - 当然是好用啦！</a></div>
                         </div>
                     </div>
                 </div>
