--- a/themes/WebStack-Hugo/layouts/partials/footer.html
+++ b/themes/WebStack-Hugo/layouts/partials/footer.html
@@ -125,7 +125,7 @@ function switchNightMode(){
 </script>
 <script>
 //网站运行时长
-var BootDate = new Date("2024/3/14 23:00:00");//设置网站运行时间，格式：年/月/日 时:分:秒
+var BootDate = new Date("2024/10/1 00:00:00");//设置网站运行时间，格式：年/月/日 时:分:秒
 function ShowRunTime(id) {
 var NowDate = new Date();
 var RunDateM = parseInt(NowDate - BootDate);
@@ -134,7 +134,7 @@ var RunHours = Math.floor(RunDateM%(24*3600*1000)/(3600*1000));
 var RunMinutes = Math.floor(RunDateM%(24*3600*1000)%(3600*1000)/(60*1000));
 var RunSeconds = Math.round(RunDateM%(24*3600*1000)%(3600*1000)%(60*1000)/1000);
 var RunTime = RunDays + "天" + RunHours + "时" + RunMinutes + "分" + RunSeconds + "秒";
-document.getElementById(id).innerHTML = "sunshine是真的菜：" + RunTime;
+document.getElementById(id).innerHTML = "西北师范大学公益导航是真的好用：" + RunTime;
 }
 setInterval("ShowRunTime('RunTime')", 1000);
 </script>
