--- a/themes/WebStack-Hugo/layouts/partials/footer.html
+++ b/themes/WebStack-Hugo/layouts/partials/footer.html
@@ -134,7 +134,7 @@ var RunHours = Math.floor(RunDateM%(24*3600*1000)/(3600*1000));
 var RunMinutes = Math.floor(RunDateM%(24*3600*1000)%(3600*1000)/(60*1000));
 var RunSeconds = Math.round(RunDateM%(24*3600*1000)%(3600*1000)%(60*1000)/1000);
 var RunTime = RunDays + "天" + RunHours + "时" + RunMinutes + "分" + RunSeconds + "秒";
-document.getElementById(id).innerHTML = "西北师范大学公益导航是真的好用：" + RunTime;
+document.getElementById(id).innerHTML = "西北师范大学网络导航枢纽是真的好用：" + RunTime;
 }
 setInterval("ShowRunTime('RunTime')", 1000);
 </script>
